# x_wing

./: CMakeLists.txt  README.md
components/configurations/parameters/: CMakeLists.txt  parameters.c
components/configurations/parameters/include/: parameters.h
components/drivers/imu/: CMakeLists.txt  imu.c
components/drivers/imu/include/: imu.h
components/drivers/leds/: CMakeLists.txt  led.c
components/drivers/leds/include/: led.h
components/ros_coordinator/: CMakeLists.txt  ros_coordinator.c
components/ros_coordinator/include/: ros_coordinator.h
components/system/: CMakeLists.txt  system.c
components/system/include/: system.h
main/: Kconfig.projbuild  main.c
